--- a/react-boilerplate/src/components/Button/index.mdx
+++ b/react-boilerplate/src/components/Button/index.mdx
@@ -5,6 +5,8 @@ name: Button
 import { Playground, Props } from 'docz'
 import 'bootstrap/dist/css/bootstrap.css'
 import 'sass/app.scss'
+import ReactLogo from 'svgs/react-logo.svg'
+import reduxLogo from 'svgs/redux-logo.svg'
 import Button from './index'
 
 # Button
@@ -16,4 +18,9 @@ import Button from './index'
 <Playground>
   <Button>Click</Button>
   <Button color="primary">Click</Button>
+
+
+  <img src={reduxLogo} alt="redux-logo" width={20} height={20} />
+
+
 </Playground>
